Protocol independent links

--- a/musetic/templates/base.html
+++ b/musetic/templates/base.html
@@ -9,7 +9,7 @@
 
 	{# Musetic Icon #}
 	<link rel="shortcut icon" href="{% static 'musetic/img/hexagon-black-logo-100.png' %}">
-        <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,500,700' rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Raleway:400,300,500,700' rel='stylesheet' type='text/css'>
 
         {# Fonts #}
         {# Stylesheets #}
@@ -21,7 +21,7 @@
 	{# Javascript #}
 	<script type="text/javascript" src="{% static 'musetic/js/vendor/modernizr.js' %}"></script>
 	<!--[if IE]>
-  		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
 </head>
@@ -188,7 +188,7 @@
 
 
 <script type="text/javascript" src="{% static 'musetic/js/vendor/jquery.js' %}"></script>
-<script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
+<script language="javascript" type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
 <script type="text/javascript" src="{% static 'musetic/js/vendor/classie.js' %}"></script>
 <script type="text/javascript" src="{% static 'musetic/js/vendor/plugin.js' %}"></script>
 <script type="text/javascript" src="{% static 'musetic/js/main.js' %}?v=3"></script>
