--- a/templates/base_full_width.html
+++ b/templates/base_full_width.html
@@ -15,7 +15,7 @@
         {# Stylesheets #}
         <link rel="stylesheet" href="{% static 'musetic/css/normalize.css' %}">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{% static 'musetic/css/main.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
     	{% block css %}{% endblock %}
 
 	{# Javascript #}
