--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,13 @@
 
 	{# Musetic Icon #}
 	<link rel="shortcut icon" href="{% static 'musetic/img/hexagon-black-logo-100.png' %}">
-        <link href='//fonts.googleapis.com/css?family=Raleway:400,300,500,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,500,700' rel='stylesheet' type='text/css'>
 
-        {# Fonts #}
-        {# Stylesheets #}
-        <link rel="stylesheet" href="{% static 'musetic/css/normalize.css' %}">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{% static 'css/main.css' %}?v=3">
-    	{% block css %}{% endblock %}
+    {# Stylesheets #}
+    <link rel="stylesheet" href="{% static 'musetic/css/normalize.css' %}">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'musetic/css/main.css' %}?v=3">
+    {% block css %}{% endblock %}
 
 	{# Javascript #}
 	<script type="text/javascript" src="{% static 'musetic/js/vendor/modernizr.js' %}"></script>
